tdf#158452: FB: impossible to change field to "entry required" in GUI

... after table has been saved.

There was an hack due to the fact that before FB 3.0, it wasn't possible to use ALTER TABLE to change nullable.
See https://bugs.documentfoundation.org/show_bug.cgi?id=158452#c1
Since the hack doesn't work and since FB 3.0 since several years, let's remove the hack and use ALTER TABLE command.

Change-Id: I145077bb4c4874f5fe31e375cfb64176a1293575
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160220
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins
(cherry picked from commit 735b6b3861ed898dafa5c9d08400c37d1996283e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160173
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>